Added campaigns view in sensor page with JSON download, added footer with branding
